--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.2.0",
